--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,10 @@
 
 body {
     font-family: "Work Sans", sans-serif;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 html {
+    overflow-x: hidden !important;
     scroll-behavior: smooth;
 }
