--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,7 @@
 /* Whole page background */
 .portfolio10-homepage {
     width: 100%;
+    overflow-x: hidden;
     /* background:
         radial-gradient(circle at top left, #ffe9c2 0%, transparent 60%),
         radial-gradient(circle at top right, #d8f8ff 0%, transparent 60%); */
@@ -13,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 40px;
     /* border: 2px solid black; */
 }
 
@@ -20,7 +22,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
 }
 
 .portfolio10-hero-left h1 {
@@ -43,7 +45,7 @@
 .portfolio10-say-hello-btn {
     background: #A53DFF;
     color: white;
-    padding: 10px 22px;
+    padding: 12px 26px;
     border: none;
     border-radius: 6px;
     cursor: pointer;
@@ -57,6 +59,7 @@
     overflow: hidden;
     border-radius: 6px;
     width: fit-content;
+    flex-wrap: wrap;
 }
 
 .portfolio10-stat-box {
@@ -86,7 +89,7 @@
 
 /* Hero image */
 .portfolio10-hero-img {
-    height: 506px;
+    height: 536px;
     width: 436px;
     object-fit: cover;
     background: #fff;
@@ -125,4 +128,56 @@
     background: radial-gradient(circle, rgba(118, 241, 255, 0.662), transparent 70%);
     filter: blur(160px);
     z-index: -1;
+}
+
+@media (max-width: 992px) {
+
+    .portfolio10-hero-section {
+        flex-direction: column;
+        text-align: center;
+        padding: 80px 5% 200px 5%;
+
+    }
+
+    .portfolio10-hero-left p {
+        width: 100%;
+    }
+
+    .portfolio10-hero-img {
+        max-width: 350px;
+        margin-top: 20px;
+    }
+
+    .portfolio10-stats-row {
+        justify-content: center;
+        text-align: center;
+        /* align-items: center; */
+        align-self: center;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .portfolio10-homepage {
+        position: relative;
+    }
+
+    .portfolio10-hero-left h1 {
+        font-size: 36px;
+    }
+
+    .portfolio10-hero-left p {
+        font-size: 15px;
+    }
+
+    .portfolio10-stat-box {
+        width: 45%;
+        /* 2 stats per row */
+    }
+
+    .portfolio10-hero-img {
+        display: none;
+        max-width: 250px;
+        margin-top: 20px;
+    }
 }
